# Earendil-Otonomius

./: .gitignore  Dockerfile  README.md  docker-compose.yml  external_goal_listener.py  find_safe_wps.py  generate_worlds.py  navigate_to_tunnel.py  necati_zeynep_project_plan_son_monday_1200.md  proposal.docx  ros_bridge_start.sh  ros_entrypoint.sh  run_dual_ukf_test.sh  run_full_test.sh  run_hybrid_test.sh  run_test.sh  scale_urdf.py  sim_config.yaml  start_matlab_test.sh  start_simulation.py  test_5wp.py  test_dual_ukf.py
matlab_interface/: app1.mlapp
src/: gps_waypoint_nav.py  mapping_drive.py  sensor_drive_test.py  wasd_teleop.py
src/leo_common/leo_description/urdf/: leo_sim.urdf.xacro  macros.xacro
src/leo_kernel/: CMakeLists.txt  package.xml
src/leo_kernel/config/: hybrid_waypoints.yaml  nav2_params_hybrid.yaml  navsat.yaml  slam_toolbox_params.yaml  ukf_local.yaml
src/leo_kernel/launch/: navigation_hybrid.launch.py
src/leo_kernel/scripts/: mission_manager.py  tf_mode_relay.py
src/leo_simulator/leo_gz_bringup/: CMakeLists.txt  package.xml
src/leo_simulator/leo_gz_bringup/config/: ekf.yaml  ekf_global.yaml  ekf_local.yaml  nav2_params.yaml  nav2_params_gps.yaml  navsat.yaml  rviz_hybrid.rviz  ukf_global.yaml  ukf_global_hybrid.yaml  ukf_local.yaml  waypoints.yaml
src/leo_simulator/leo_gz_bringup/launch/: leo_gz.launch.py  marsyard_launch.py  navigation.launch.py  navigation_ekf.launch.py  navigation_hybrid.launch.py  navigation_matlab_test.launch.py  navigation_ukf.launch.py  ros-humble-sim.code-workspace  slam.launch.py  spawn_robot.launch.py
src/leo_simulator/leo_gz_bringup/maps/: empty_50x50_map.yaml  marsyard_map.pgm  marsyard_map.yaml
src/leo_simulator/leo_gz_bringup/scripts/: goal_pose_bridge.py  gps_monitor.py  mission_manager.py  test_gps_nav.py  tunnel_gps_spoofer.py  wheel_odom_publisher.py
src/leo_simulator/leo_gz_bringup/scripts/archive/: test_hybrid_mission.py  waypoint_runner.py
src/leo_simulator/leo_gz_worlds/worlds/: leo_empty.sdf  leo_obstacles.sdf  marsyard2020.sdf
src/teleop_web/: index.html  teleop_server.py
